--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==2.1.1
 django-bootstrap-form==3.4
 django-model-utils==3.1.2
+djangorestframework==3.8.2
 mysql-connector-python==8.0.12
 olefile==0.46
 pbr==4.2.0
