--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-Django==2.1.7
+Django==2.2
 django-bootstrap-form==3.4
 django-model-utils==3.1.2
 djangorestframework==3.9.2
 mysql-connector-python==8.0.15
 olefile==0.46
 pbr==5.1.3
-Pillow==5.4.1
+Pillow==6.0.0
 protobuf==3.7.1
 pytz==2018.9
 six==1.12.0
+sqlparse==0.3.0
 stevedore==1.30.1
 uWSGI==2.0.18
