--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Django==2.2.1
+django-admin-ip-restrictor==1.0.0
 django-bootstrap-form==3.4
+django-ipware==2.1.0
 django-model-utils==3.1.2
 djangorestframework==3.9.4
 mysql-connector-python==8.0.16
