uwsgiを設定ファイルに、mysqlコマンドの内容を設定ファイルに

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   portfolio-web:
       container_name: portfolio-web
       image: nginx:1.13
+      restart: always
       environment:
         VIRTUAL_HOST: ${VIRTUAL_HOST}
         LETSENCRYPT_HOST: ${LETSENCRYPT_HOST}
@@ -21,7 +22,7 @@ services:
   portfolio-db:
       container_name: portfolio-db
       image: mysql:5.7
-      command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+      restart: always
       expose:
         - "3306"
       environment:
@@ -40,7 +41,8 @@ services:
   portfolio-app:
       container_name: portfolio-app
       build: ./django
-      command: uwsgi --socket :8001 --module mysite.wsgi --py-autoreload 1 --logto /tmp/mylog.log
+      restart: always
+      command: uwsgi --ini /code/uwsgi.ini
       volumes:
         - ./src:/code
         - ./src/static:/static
