--- a/mysql/conf/portfolio.cnf
+++ b/mysql/conf/portfolio.cnf
@@ -1,8 +1,8 @@
 [mysqld]
 character-set-server=utf8
-collation-server=utf8_general_ci
-
 replicate-do-db=portfolio
-
 log-bin=/var/log/mysql/bin-log
 server-id=2
+
+[mysql]
+default-character-set=utf8
