--- a/src/uwsgi.ini
+++ b/src/uwsgi.ini
@@ -2,7 +2,7 @@
 socket = :8001
 module = mysite.wsgi
 py-autoreload = 1
-logto = /tmp/mylog.log
+logto = /tmp/uwsgi.log
 uid = www-data
 gid = www-data
 processes = 4
