--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,13 @@ services:
         VIRTUAL_HOST: ${VIRTUAL_HOST}
         LETSENCRYPT_HOST: ${LETSENCRYPT_HOST}
         LETSENCRYPT_EMAIL: ${LETSENCRYPT_EMAIL}
+        SETREALIPFROM: ${SETREALIPFROM}
       volumes:
         - ./nginx/conf:/etc/nginx/conf.d
         - ./nginx/uwsgi_params:/etc/nginx/uwsgi_params
         - ./src/static:/static
         - ./src/media:/media
+      command: /bin/sh -c "envsubst '$$SETREALIPFROM' < /etc/nginx/conf.d/portfolio.conf.template > /etc/nginx/conf.d/portfolio.conf && nginx -g 'daemon off;'"
       depends_on:
         - portfolio-app
       networks:
