レプリケーション用の設定を追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,9 @@ services:
         MYSQL_DATABASE: ${MYSQL_DATABASE}
         MYSQL_USER: ${MYSQL_USER}
         MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+        REPLICATION_USER: ${REPLICATION_USER}
+        REPLICATION_PASSWORD: ${REPLICATION_PASSWORD}
+        REPLICATION_HOST: ${REPLICATION_HOST}
         TZ: 'Asia/Tokyo'
       volumes:
         - portfolio-db:/var/lib/mysql
@@ -44,7 +47,7 @@ services:
       container_name: portfolio-app
       build: ./django
       restart: always
-      command: uwsgi --ini /code/uwsgi.ini
+      command: bash -c "python manage.py makemigrations && python manage.py migrate && uwsgi --ini /code/uwsgi.ini"
       volumes:
         - ./src:/code
         - ./src/static:/static
