--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,11 @@ services:
         - "3306"
       environment:
         MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+        MYSQL_ROOT_HOST: ${MYSQL_ROOT_HOST}
         MYSQL_DATABASE: ${MYSQL_DATABASE}
         MYSQL_USER: ${MYSQL_USER}
         MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+        MYSQL_USER_HOST: ${MYSQL_USER_HOST}
         REPLICATION_USER: ${REPLICATION_USER}
         REPLICATION_PASSWORD: ${REPLICATION_PASSWORD}
         REPLICATION_HOST: ${REPLICATION_HOST}
