Revert "pip-auto-update"
This reverts commit 031731eb52e5c8795cb51daf3c422d0aec91d175.

--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,19 +1,17 @@
-asgiref==3.2.3
-Django==2.2.9
-django-admin-ip-restrictor==2.1.1
+Django==2.2.5
+django-admin-ip-restrictor==1.0.0
 django-bootstrap-form==3.4
 django-environ==0.4.5
 django-ipware==2.1.0
-django-model-utils==4.0.0
-djangorestframework==3.11.0
-dnspython==1.16.0
-mysql-connector-python==8.0.19
+django-model-utils==3.2.0
+djangorestframework==3.10.3
+mysql-connector-python==8.0.17
 olefile==0.46
-pbr==5.4.4
-Pillow==7.0.0
-protobuf==3.6.1
-pytz==2019.3
-six==1.14.0
+pbr==5.4.3
+Pillow>=6.2.0
+protobuf==3.9.1
+pytz==2019.2
+six==1.12.0
 sqlparse==0.3.0
 stevedore==1.31.0
 uWSGI==2.0.18
