--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,4 +1,3 @@
-asgiref==3.2.3
 Django==2.2.5
 django-admin-ip-restrictor==1.0.0
 django-bootstrap-form==3.4
@@ -6,12 +5,11 @@ django-environ==0.4.5
 django-ipware==2.1.0
 django-model-utils==3.2.0
 djangorestframework==3.10.3
-dnspython==1.16.0
 mysql-connector-python==8.0.17
 olefile==0.46
 pbr==5.4.3
-Pillow==7.0.0
-protobuf==3.6.1
+Pillow>=6.2.0
+protobuf==3.9.1
 pytz==2019.2
 six==1.12.0
 sqlparse==0.3.0
