--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -5,7 +5,7 @@ django-environ==0.4.5
 django-ipware==2.1.0
 django-model-utils==3.2.0
 djangorestframework==3.10.3
-mysql-connector-python==8.0.17
+mysqlclient==1.4.6
 olefile==0.46
 pbr==5.4.3
 Pillow>=6.2.0
