--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,18 +1,25 @@
 asgiref==3.2.3
+beautifulsoup4==4.8.2
+certifi==2019.11.28
+chardet==3.0.4
 Django==2.2.9
 django-admin-ip-restrictor==2.1.1
-django-bootstrap-form==3.4
 django-environ==0.4.5
+django-fixture-magic==0.1.3
 django-ipware==2.1.0
 django-model-utils==4.0.0
 djangorestframework==3.11.0
+djangorestframework-jwt==1.11.0
+idna==2.8
 mysqlclient==1.4.6
-olefile==0.46
-pbr==5.4.4
-Pillow==7.0.0
+oauthlib==3.1.0
 protobuf==3.11.2
+PyJWT==1.7.1
 pytz==2019.3
+requests==2.22.0
+requests-oauthlib==1.3.0
 six==1.14.0
+soupsieve==1.9.5
 sqlparse==0.3.0
-stevedore==1.31.0
+urllib3==1.25.8
 uWSGI==2.0.18
